# n8n_nodes_collector

./: .gitignore  01_SKILLS_md_content.docx  02_Schemas_map_json_node_json_examples.docx  03_Complete_Specification_n8n_nodes_package.docx  AGENTS.md  CHANGELOG.md  README.md  updated_SKILLS_md_content.docx
.github/: pull_request_template.md
collector/: README.md  pyproject.toml
collector/live/: live-sample.discovery.json
collector/src/n8n_nodes_collector/: __init__.py  audit.py  cli.py  config.py  discovery.py  extract.py  fetch.py  installers.py  models.py  normalize.py  progress.py  render.py  resolver.py  validate.py  workflows.py
collector/tests/: test_audit.py  test_build.py  test_discovery.py  test_discovery_live.py  test_extract.py  test_fetch.py  test_installers.py  test_normalize.py  test_progress.py  test_refresh.py  test_render_validate.py  test_resolver.py
collector/tests/fixtures/discovery/: app_nodes_library.html  cluster_root_library.html  trigger_nodes_library.html
collector/tests/fixtures/extract/: ai_agent_node.html  google_sheets_common_issues.html  google_sheets_document_operations.html  google_sheets_node.html  schedule_trigger_node.html
n8n_nodes_package_starter/: README.md  SKILLS.md  map.json  map.md  package-manifest.json  sources.json  stats.json  taxonomy.json
package/: README.md  SKILLS.md  map.json  map.md  package-manifest.json  sources.json  stats.json  taxonomy.json
research/: architecture_candidates.md  open_questions.md  source_inventory.md
scripts/: install-cli.sh  install-skill.sh  uninstall-cli.sh  uninstall-skill.sh
(+47 files in other folders)
